# imgui-sfml-starter

./: .gitignore  CMakeLists.txt  README.md
lib/: CMakeLists.txt
lib/sfml/: CMakeLists.txt
src/: main.cpp
